# shellfuncs

./: .gitignore  Makefile  configure.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
shellfuncs/: functions.py  utils.py
