[project]
name = "shellfuncs"
version = "0.0.1"
description = ""
authors = [
    {name = "Jonathan Scherrer", email = "jonathan.scherrer@externe.e-i.com"},
]
dependencies = [
    "kubernetes~=19.15",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]

[project.scripts]
oclabel = "shellfuncs.functions:oclabel"
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
configure = [
    "atoml~=1.1",
]
